# datafilter

./: .gitmodules  CMakeLists.txt  README.md  setup-datafilter.sh
apps/: README.md  datafilter2.cpp  dataflow_emu2.cpp
cmake/: datafilterConfig.cmake.in
include/datafilter/: data_struct.hpp  hdf5_writer_libs.hpp
pybindsrc/: hdf5_writer_libs.cpp  module.cpp
schema/datafilter/: app.jsonnet  appinfo.jsonnet
test/apps/: README.md  datafilter-nodash.py  datafilter.py  datafilter_tr_receive_test.cpp  datafilter_tr_send_test.cpp  dataflow_emu.py  hdf5libs_datafilter_writer_test.cpp  hdf5libs_datawriter_test.cpp  set_debug_level.sh
